<resources>
    <string name="app_name">Lapichat</string>
    <string name="email">Email</string>

    <string name="start_activity">start Activity</string>
    <string name="create_account">Create Account</string>

    <string name="log_out">Log Out</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>

    <string name="hi_there">Hi there</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="display_name">Display Name</string>
    <string name="users_default_status">Users default Status</string>
</resources>
